--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# https://git-scm.com/docs/gitignore
-# https://help.github.com/articles/ignoring-files
-# Example.gitignore files : https://github.com/github/gitignore
+# //git-scm.com/docs/gitignore
+# //help.github.com/articles/ignoring-files
+# Example.gitignore files : //github.com/github/gitignore
 _notes/
 /bower_components/
 /node_modules/
